--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 		<link rel="stylesheet" href="styles/modal.css">
 		<!-- JavaScript code here -->
 	</head>
-		<!-- Body Section Starts Here -->
-	<body background="images/bgimage_1.png" id="bodybg">
+	<!-- Body Section Starts Here -->
+	<body background="images/bgimage_1.png" id="bodybg" style="margin-top: 35px;">
 		<!-- Reservation Pop-Up -->
 		<div class="popup_res">
 			<div id="id01" class="modal">
@@ -42,45 +42,50 @@
 							<span id="name">
 								<label><b>Name:</b></label>
 								<input type="text" placeholder="Enter Name" id="namer"required>
-								<label type="text"><b>Teacher/Professor:</b></label>
+								<label><b>Teacher/Professor:</b></label>
 								<input type="text" placeholder="Teacher/Professor's Name" required>
 							</span>
 						<br><br>
-							<span class="resinfo">
-								<label style="font-size: 18px"><b>Reservation Date:</b></label>
-								<input type="date" required>
+							<span class="resinfo"">
+								<label style="font-size: 18px"><b>Date:</b></label>
+								<input type="date" required style="margin-right: 10px; width: 120px"> to <input type="date" required style="margin-left: 10px">
 							</span>
 
 							<span class="resinfo">
-								<label style="font-size: 18px"><b>Reservation Time:</b></label>
-								<input type="time" required>
-							</span>
-
-							<span class="resinfo">
-								<label style="font-size: 18px"><b>Number of Students:</b></label>
-								<input type="number" style="width: 60px">
+								<label style="font-size: 18px"><b>Time:</b></label>
+								<input type="time" required style="margin-right: 10px"> to <input type="time" required style="margin-left: 10px">
 							</span>
 						<br><br>
 						<hr style="width: 95%; height: 2">
 							<div id="modal-bottom">
 								<label><b>Equipment Needed:</b></label><br><br>
 									<span class="equips_1">
-										<input type="checkbox" name="eq1">Microphone
+										<input type="checkbox" name="eq1">Microphone <br>
+										<input type="checkbox" name="eq5">DVD Player <br>
+										<input type="checkbox" name="eq9">Globes
 									</span>
 
 									<span class="equips_2">
-										<input type="checkbox" name="eq2">Speaker/Karaoke
+										<input type="checkbox" name="eq2">Karaoke <br>
+										<input type="checkbox" name="eq6">CD Player <br>
+										<input type="checkbox" name="eq10">Maps
 									</span>
 
 									<span class="equips_3">
-										<input type="checkbox" name="eq3">Projector
+										<input type="checkbox" name="eq3">Projector <br>
+										<input type="checkbox" name="eq7">Opaque Projector <br>
+										<input type="checkbox" name="eq11">Charts
 									</span>
 
 									<span class="equips_4">
-										<input type="checkbox" name="eq4">Computer
+										<input type="checkbox" name="eq4">Computer <br>
+										<input type="checkbox" name="eq8">Cassette Player <br>
+										<input type="checkbox" name="eq12">Models
 									</span>
 							</div>
-							<label><b></b></label>
+							<br>
+							<label><b>Remarks:</b></label> <br>
+							<textarea id="notes" cols="115" rows="3" placeholder="Purpose of Reservation/Number of Students/Other Concerns"></textarea>
 						</fieldset>
 					</div>
 
@@ -138,32 +143,32 @@
 
 			<!-- Full-width images with number and caption text -->
 			<div class="mySlides fade">
-				<img src="images/slide/img01.jpg" style="width:100%; height: 556px">
+				<img src="images/slide/img01.jpg" style="width:100%;">
 				<div class="text">The quick brown fox jumped over the lazy dog. The quick brown fox jumped over the lazy dog.</div>
 			</div>
 
 			<div class="mySlides fade">
-				<img src="images/slide/img02.jpg" style="width:100%; height: 556px">
+				<img src="images/slide/img02.jpg" style="width:100%;">
 				<div class="text">Caption Two</div>
 			</div>
 
 			<div class="mySlides fade">
-				<img src="images/slide/img03.jpg" style="width:100%; height: 556px">
+				<img src="images/slide/img03.jpg" style="width:100%;">
 				<div class="text">Caption Three</div>
 			</div>
 
 			<div class="mySlides fade">
-				<img src="images/slide/img04.jpg" style="width:100%; height: 556px">
+				<img src="images/slide/img04.jpg" style="width:100%;">
 				<div class="text">Caption Three</div>
 			</div>
 
 			<div class="mySlides fade">
-				<img src="images/slide/img05.jpg" style="width:100%; height: 556px">
+				<img src="images/slide/img05.jpg" style="width:100%;">
 				<div class="text">Caption Three</div>
 			</div>
 
 			<div class="mySlides fade">
-				<img src="images/slide/img06.jpg" style="width:100%; height: 556px">
+				<img src="images/slide/img06.jpg" style="width:100%;">
 				<div class="text">Caption Three</div>
 			</div>
 		</div>
@@ -181,8 +186,8 @@
 		<!-- Javascript for Image Slider -->
 		<script src="scripts/main.js"></script>
 		<!-- Footer -->
-		<footer>
-			<i>Copyright:</i> &nbsp; <big>Richard Alphege A. Ravalo, RL</big> | IBED - Junior Librarian | Sacred Heart College of Lucena, Inc. |
+		<footer style="display: none;">
+			<big>&copy; Richard Alphege A. Ravalo, RL</big> | IBED - Junior Librarian | Sacred Heart College of Lucena, Inc. |
 			(042) 710 3888 | (+63) 943 282 0995 | raravalo@up.edu.ph
 		</footer>
 		<!-- Live Reload Script -->
