--- a/pages/faqs.html
+++ b/pages/faqs.html
@@ -43,45 +43,50 @@
 							<span id="name">
 								<label><b>Name:</b></label>
 								<input type="text" placeholder="Enter Name" id="namer"required>
-								<label type="text"><b>Teacher/Professor:</b></label>
+								<label><b>Teacher/Professor:</b></label>
 								<input type="text" placeholder="Teacher/Professor's Name" required>
 							</span>
 						<br><br>
-							<span class="resinfo">
-								<label style="font-size: 18px"><b>Reservation Date:</b></label>
-								<input type="date" required>
+							<span class="resinfo"">
+								<label style="font-size: 18px"><b>Date:</b></label>
+								<input type="date" required style="margin-right: 10px; width: 120px"> to <input type="date" required style="margin-left: 10px">
 							</span>
 
 							<span class="resinfo">
-								<label style="font-size: 18px"><b>Reservation Time:</b></label>
-								<input type="time" required>
-							</span>
-
-							<span class="resinfo">
-								<label style="font-size: 18px"><b>Number of Students:</b></label>
-								<input type="number" style="width: 60px">
+								<label style="font-size: 18px"><b>Time:</b></label>
+								<input type="time" required style="margin-right: 10px"> to <input type="time" required style="margin-left: 10px">
 							</span>
 						<br><br>
 						<hr style="width: 95%; height: 2">
 							<div id="modal-bottom">
 								<label><b>Equipment Needed:</b></label><br><br>
 									<span class="equips_1">
-										<input type="checkbox" name="eq1">Microphone
+										<input type="checkbox" name="eq1">Microphone <br>
+										<input type="checkbox" name="eq5">DVD Player <br>
+										<input type="checkbox" name="eq9">Globes
 									</span>
 
 									<span class="equips_2">
-										<input type="checkbox" name="eq2">Speaker/Karaoke
+										<input type="checkbox" name="eq2">Karaoke <br>
+										<input type="checkbox" name="eq6">CD Player <br>
+										<input type="checkbox" name="eq10">Maps
 									</span>
 
 									<span class="equips_3">
-										<input type="checkbox" name="eq3">Projector
+										<input type="checkbox" name="eq3">Projector <br>
+										<input type="checkbox" name="eq7">Opaque Projector <br>
+										<input type="checkbox" name="eq11">Charts
 									</span>
 
 									<span class="equips_4">
-										<input type="checkbox" name="eq4">Computer
+										<input type="checkbox" name="eq4">Computer <br>
+										<input type="checkbox" name="eq8">Cassette Player <br>
+										<input type="checkbox" name="eq12">Models
 									</span>
 							</div>
-							<label><b></b></label>
+							<br>
+							<label><b>Remarks:</b></label> <br>
+							<textarea id="notes" cols="115" rows="3" placeholder="Purpose of Reservation/Number of Students/Other Concerns"></textarea>
 						</fieldset>
 					</div>
 
@@ -99,7 +104,6 @@
 				}
 			</script>
 		</div>
-
 		<!-- Navigation List -->
 		<nav class="nav-list">
 			<div class="nav-page">
@@ -139,6 +143,24 @@
 		<h1 style="width: 60%"><b><u>Frequently Asked Questions:</u></b></h1>
 		<hr>
 		<div class="acc-content">
+			<button class="accordion">Q: Is there a specific rule with regards the reservation of the viewing rooms?</button>
+			<div class="panel">
+				<p>
+					<b>Answer:</b><br>
+					Yes, according to the rules that we have applied to the viewing rooms, it is generally, <b>3 days before</b> the actual date of use.
+				</p>
+			</div>
+
+			<button class="accordion">Q: Is there an alloted number of hours of use per professor/teacher?</button>
+			<div class="panel">
+				<p>
+					<b>Answer:</b><br>
+					We are currently looking this up for both sections conserned; but we are proposing: <br>
+					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>20 hrs per semester</b> for the HED <i>(Higher Education Department),</i> and <br>
+					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>30 hrs per School Year</b> for the IBED <i>(Integrated Basic Education Department).</i>
+				</p>
+			</div>
+
 			<button class="accordion">Q: The reservation did not display</button>
 			<div class="panel">
 				<p>
@@ -165,28 +187,11 @@
 		</div>
 
 		<!-- Accordion JavaScript -->
-		<script type="text/JavaScript">
-			var acc = document.getElementsByClassName("accordion");
-			var i;
-
-			for (i = 0; i < acc.length; i++) {
-				acc[i].addEventListener("click", function() {
-					this.classList.toggle("active");
-					this.nextElementSibling.classList.toggle("show");
-					var panel = this.nextElementSibling;
-					if (panel.style.maxHeight){
-						panel.style.maxHeight = null;
-					} else {
-						panel.style.maxHeight = panel.scrollHeight + "px";
-					}
-				});
-			}
-		</script>
+		<script src="../scripts/script_faqs.js"></script>
 
 		<!-- Footer -->
 		<footer align="center">
-			<i>Copyright:</i> <br>
-			<big>Richard Alphege A. Ravalo, RL</big> | IBED - Junior Librarian | Sacred Heart College of Lucena, Inc. |
+			<big>&copy; Richard Alphege A. Ravalo, RL</big> | IBED - Junior Librarian | Sacred Heart College of Lucena, Inc. |
 			(042) 710 3888 | (+63) 943 282 0995 | raravalo@up.edu.ph
 		</footer>
 		<!-- Live Reload Script -->
