--- a/pages/ibed_viewroom_3.html
+++ b/pages/ibed_viewroom_3.html
@@ -15,6 +15,7 @@
 	</head>
 		<!-- Body Section Starts Here -->
 	<body background="../images/bgimage_1.png" id="bodybg">
+		<!-- Reservation Pop-Up -->
 		<div class="popup_res">
 			<div id="id01" class="modal">
 				<form class="modal-content animate" action="#">
@@ -41,45 +42,50 @@
 							<span id="name">
 								<label><b>Name:</b></label>
 								<input type="text" placeholder="Enter Name" id="namer"required>
-								<label type="text"><b>Teacher/Professor:</b></label>
+								<label><b>Teacher/Professor:</b></label>
 								<input type="text" placeholder="Teacher/Professor's Name" required>
 							</span>
 						<br><br>
-							<span class="resinfo">
-								<label style="font-size: 18px"><b>Reservation Date:</b></label>
-								<input type="date" required>
+							<span class="resinfo"">
+								<label style="font-size: 18px"><b>Date:</b></label>
+								<input type="date" required style="margin-right: 10px; width: 120px"> to <input type="date" required style="margin-left: 10px">
 							</span>
 
 							<span class="resinfo">
-								<label style="font-size: 18px"><b>Reservation Time:</b></label>
-								<input type="time" required>
-							</span>
-
-							<span class="resinfo">
-								<label style="font-size: 18px"><b>Number of Students:</b></label>
-								<input type="number" style="width: 60px">
+								<label style="font-size: 18px"><b>Time:</b></label>
+								<input type="time" required style="margin-right: 10px"> to <input type="time" required style="margin-left: 10px">
 							</span>
 						<br><br>
 						<hr style="width: 95%; height: 2">
 							<div id="modal-bottom">
 								<label><b>Equipment Needed:</b></label><br><br>
 									<span class="equips_1">
-										<input type="checkbox" name="eq1">Microphone
+										<input type="checkbox" name="eq1">Microphone <br>
+										<input type="checkbox" name="eq5">DVD Player <br>
+										<input type="checkbox" name="eq9">Globes
 									</span>
 
 									<span class="equips_2">
-										<input type="checkbox" name="eq2">Speaker/Karaoke
+										<input type="checkbox" name="eq2">Karaoke <br>
+										<input type="checkbox" name="eq6">CD Player <br>
+										<input type="checkbox" name="eq10">Maps
 									</span>
 
 									<span class="equips_3">
-										<input type="checkbox" name="eq3">Projector
+										<input type="checkbox" name="eq3">Projector <br>
+										<input type="checkbox" name="eq7">Opaque Projector <br>
+										<input type="checkbox" name="eq11">Charts
 									</span>
 
 									<span class="equips_4">
-										<input type="checkbox" name="eq4">Computer
+										<input type="checkbox" name="eq4">Computer <br>
+										<input type="checkbox" name="eq8">Cassette Player <br>
+										<input type="checkbox" name="eq12">Models
 									</span>
 							</div>
-							<label><b></b></label>
+							<br>
+							<label><b>Remarks:</b></label> <br>
+							<textarea id="notes" cols="115" rows="3" placeholder="Purpose of Reservation/Number of Students/Other Concerns"></textarea>
 						</fieldset>
 					</div>
 
@@ -97,7 +103,7 @@
 				}
 			</script>
 		</div>
-
+		<!-- Navigation List -->
 		<nav class="nav-list">
 			<div class="nav-page">
 				<ul>
@@ -131,11 +137,11 @@
 				<button onclick="document.getElementById('id01').style.display='block'" id="resbtn">Reserve</button>
 			</div>
 		</nav>
-
-		<h1><b><u>Viewing Room Schedules:</u></b></h1>
-
-				<div class="sched">
-			<table width="100%" border="1" cellspacing="0">
+		<!-- Header Title -->
+		<h1><b><u>IBED VR 3 Schedule:</u></b></h1>
+		<!-- Schedule Table -->
+		<div class="sched">
+			<table border="1" cellspacing="0">
 				<tr>
 					<td class="time"></td>
 					<th id="mon">Monday</th>
@@ -146,7 +152,7 @@
 					<th id="sat">Saturday</th>
 				</tr>
 				<tr>
-					<td class="time">7:00 - 8:00</td>
+					<td class="time">7:00</td>
 					<td></td>
 					<td></td>
 					<td></td>
@@ -155,7 +161,7 @@
 					<td></td>
 				</tr>
 				<tr>
-					<td class="time">8:00 - 9:00</td>
+					<td class="time">7:30</td>
 					<td></td>
 					<td></td>
 					<td></td>
@@ -164,7 +170,7 @@
 					<td></td>
 				</tr>
 				<tr>
-					<td class="time">9:00 - 10:00</td>
+					<td class="time">8:00</td>
 					<td></td>
 					<td></td>
 					<td></td>
@@ -173,7 +179,7 @@
 					<td></td>
 				</tr>
 				<tr>
-					<td class="time">10:00 - 11:00</td>
+					<td class="time">8:30</td>
 					<td></td>
 					<td></td>
 					<td></td>
@@ -182,7 +188,7 @@
 					<td></td>
 				</tr>
 				<tr>
-					<td class="time">11:00 - 12:00</td>
+					<td class="time">9:00</td>
 					<td></td>
 					<td></td>
 					<td></td>
@@ -191,7 +197,7 @@
 					<td></td>
 				</tr>
 				<tr>
-					<td class="time">12:00 - 1:00</td>
+					<td class="time">9:30</td>
 					<td></td>
 					<td></td>
 					<td></td>
@@ -200,7 +206,7 @@
 					<td></td>
 				</tr>
 				<tr>
-					<td class="time">1:00 = 2:00</td>
+					<td class="time">10:00</td>
 					<td></td>
 					<td></td>
 					<td></td>
@@ -209,7 +215,16 @@
 					<td></td>
 				</tr>
 				<tr>
-					<td class="time">2:00 - 3:00</td>
+					<td class="time">10:30</td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td class="time">11:00</td>
 					<td ></td>
 					<td></td>
 					<td></td>
@@ -218,7 +233,7 @@
 					<td></td>
 				</tr>
 				<tr>
-					<td class="time">3:00 - 4:00</td>
+					<td class="time">11:30</td>
 					<td></td>
 					<td></td>
 					<td></td>
@@ -227,7 +242,7 @@
 					<td></td>
 				</tr>
 				<tr>
-					<td class="time">4:00 - 5:00</td>
+					<td class="time">12:00</td>
 					<td></td>
 					<td></td>
 					<td></td>
@@ -236,7 +251,7 @@
 					<td></td>
 				</tr>
 				<tr>
-					<td class="time">5:00 - 6:00</td>
+					<td class="time">1:00</td>
 					<td></td>
 					<td></td>
 					<td></td>
@@ -245,7 +260,7 @@
 					<td></td>
 				</tr>
 				<tr>
-					<td class="time">6:00 - 7:00</td>
+					<td class="time">1:30</td>
 					<td></td>
 					<td></td>
 					<td></td>
@@ -254,7 +269,79 @@
 					<td></td>
 				</tr>
 				<tr>
-					<td class="time">7:00 - 8:00</td>
+					<td class="time">2:00</td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td class="time">2:30</td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td class="time">3:00</td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td class="time">3:30</td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td class="time">4:00</td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td class="time">4:30</td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td class="time">5:00</td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td class="time">5:30</td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td class="time">6:00</td>
 					<td></td>
 					<td></td>
 					<td></td>
@@ -264,10 +351,9 @@
 				</tr>
 			</table>
 		</div>
-		
+		<!-- Footer -->
 		<footer align="center">
-			<i>Copyright:</i> <br>
-			<big>Richard Alphege A. Ravalo, RL</big> | IBED - Junior Librarian | Sacred Heart College of Lucena, Inc. |
+			<big>&copy; Richard Alphege A. Ravalo, RL</big> | IBED - Junior Librarian | Sacred Heart College of Lucena, Inc. |
 			(042) 710 3888 | (+63) 943 282 0995 | raravalo@up.edu.ph		</footer>
 		<!-- Live Reload Script -->
 		<script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
